# rand-contract

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config
examples/: schema.rs
schema/: query_msg.json
src/: contract.rs  errors.rs  lib.rs  msg.rs  state.rs
tests/: integration_tests.rs
